Fixed #zendcon not being centered on mobile devices.

--- a/app/styles/_stream.scss
+++ b/app/styles/_stream.scss
@@ -6,7 +6,7 @@
         text-align: center;
         color: #000;
         font-size: 3em;
-        padding: 2em;
+        padding: 2em 0;
         cursor: wait;
 
         i {
